fix bugs projects not respecting columns and descriptions not overlapping

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -10,6 +10,7 @@ footer {
     bottom:0px;
     background-color:var(--main-accent-color) !important;
     width: 100%;
+    z-index: 1000;
     /* margin-top:3% !important; */
 }
 
